tests/conformance/v1/fixtures/parse/valid/multiline_string.ai
app "TestApp" {
    description: "Line 1\nLine 2"
}