tests/conformance/v1/fixtures/parse/invalid/invalid_property_syntax.ai
app "TestApp" {
    description = "Wrong assignment operator"
}